# Einfeldtraeger

./: README.md  pyproject.toml
src/einfeldtraeger/: __init__.py  beam.py  cli.py  diagram.py
tests/: test_beam.py
